--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,10 +1,15 @@
-<nav>
-  <li><a href="/">Home</a></li>
-  <li>About
-  	<ul>
-  		<li><a href="/about/site.html">About This Site</a></li>
-  		<li><a href="/about/me.html">About Me</a></li>
-  		<li><a href="/about/work.html">About My Work</a></li>
-  	</ul>
-  </li>
-</nav>
+<div class="container-lg px-3 my-5 markdown-body">
+      {% if site.title and site.title != page.title %}
+      <h1><a href="{{ "/" | absolute_url }}">{{ site.title }}</a></h1>
+      {% endif %}
+	  <nav>
+		<li><a href="/">Home</a></li>
+		<li>About
+			<ul>
+				<li><a href="/about/site.html">About This Site</a></li>
+				<li><a href="/about/me.html">About Me</a></li>
+				<li><a href="/about/work.html">About My Work</a></li>
+			</ul>
+		</li>
+	  </nav>
+      {{ content }}
