--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      <h3>Navigation</h3>
+      <h3>And More</h3>
 <ul>
 <li><a href="/about/site.html">About This Site</a></li>
 <li><a href="/about/me.html">About Me</a></li>
