--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,15 @@
         <a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
       {% endif %}
     </header>
-
+  <categories>
+    {% if post %}
+    {% assign categories = post.categories %}
+{% else %}
+    {% assign categories = page.categories %}
+{% endif %}
+ {% if categories.size > 0%}
+    <p><strong>Posted In</strong>: {{categories | join: 'About,Reflections,Activities' | capitalize }}</p>
+{%endif%}
     <main id="content" class="main-content" role="main">
       {{ content }}
 
