--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<h1>Posts by Categories</h1>
+<h1>Posts By Categories</h1>
 
 <ul>
   {% for category in site.categories %}
