--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -63,6 +63,7 @@
   </li>
   {% endfor %}
 </ul>
+       {{ content }}
       <footer class="site-footer">
         {% if site.github.is_project_page %}
           <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
