--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -10,3 +10,11 @@
   </li>
   {% endfor %}
 </ul>
+{% if post %}
+    {% assign categories = post.categories %}
+{% else %}
+    {% assign categories = page.categories %}
+{% endif %}
+ {% if categories.size > 0%}
+    <p><strong>Posted In</strong>: {{categories | join: ', ' | capitalize }}</p>
+{%endif%}
