--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
     {% assign categories = page.categories %}
 {% endif %}
  {% if categories.size > 0%}
-    <p><strong>Posted In</strong>: {{categories | join: 'About,Reflections,Activities' | capitalize }}</p>
+    <p><strong>Posted In</strong>: {{categories | join: ',' | capitalize }}</p>
 {%endif%}
     <main id="content" class="main-content" role="main">
       {{ content }}
