--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,3 @@
----
-layout: default
----
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
@@ -34,7 +31,7 @@ layout: default
 <li><a href="/about/site.html">About This Site</a></li>
 <li><a href="/about/me.html">About Me</a></li>
 <li><a href="/about/work.html">About My Work</a></li>
-<li><a href="/post/categories.html">Posts By Categories</a></li>
+<li><a href="/posts/categories.html">Posts By Categories</a></li>
 </ul>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
