add style to head

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,15 @@
     <meta name="theme-color" content="#ddd6f3">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <style>
+		p {
+			font-size: 1.25em;
+			line-height: 1.5;
+		}
+		h1 {
+			color: #333;
+		}
+		</style>
   </head>
     
   <body>
