--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,14 +19,16 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <style>
-		p {
-			font-size: 1.25em;
-			line-height: 1.5;
-		}
-		h1 {
-			color: #333;
-		}
-		</style>
+  body {
+    background-color: black;
+    font-family: Monospace;
+    color: green;
+  }
+.pink-text {
+    color: pink
+  }
+</style>
+<h1 class="pink-text">Yikes, Kam!</h1>
   </head>
     
   <body>
