--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,19 +16,9 @@
 {% seo %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#ddd6f3">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-status-bar-style" content="pink-translucent">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    <style>
-  body {
-    background-color: black;
-    font-family: Monospace;
-    color: green;
-  }
-.pink-text {
-    color: pink
-  }
-</style>
-<h1 class="pink-text">Yikes, Kam!</h1>
+   
   </head>
     
   <body>
