--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,13 @@
 ---
 
 @import "{{ site.theme }}";
+
+<style>
+  body {
+    background-color: black;
+    font-family: Monospace;
+    color: pink;
+  }
+.pink-text {
+    color: pink
+  }
