--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,13 @@
     <meta name="theme-color" content="#975fa0">
     <meta name="apple-mobile-web-app-status-bar-style" content="pink-translucent">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-   
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/oncomouse/Simple-Grid@master/simple-grid.min.css">
+    <div class="container">
+  <div class="row">
+    <div class="col-3">
+      <!-- Sidebar content goes here -->
+    </div>
+    <div class="col-9">
   </head>
     
   <body>
