added classes to nav

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,14 +1,14 @@
 ---
 layout: default
 ---
-<nav>
+<nav class="navigation">
   <li><a href="/">Home</a></li>
   <li>About
-  	<ul>
-  		<li><a href="/about/site.html">About This Site</a></li>
-  		<li><a href="/about/me.html">About Me</a></li>
-  		<li><a href="/about/work.html">About My Work</a></li>
-      <li><a href="/post/categories.html">Posts By Categories</a></li>
+  	<ul class="navigation_list">
+  		<li class="navigation_list-item"><a href="/about/site.html">About This Site</a></li>
+  		<li class="navigation_list-item"><a href="/about/me.html">About Me</a></li>
+  		<li class="navigation_list-item"><a href="/about/work.html">About My Work</a></li>
+      <li class="navigation_list-item"><a href="/post/categories.html">Posts By Categories</a></li>
   	</ul>
   </li>
 </nav>
