--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,3 +11,10 @@
 .navigation_list-item {
 	display: inline-block;
 }
+
+.page-header {
+    color: #fff;
+    text-align: center;
+    background-color: #e4b4ea;
+    background-image: linear-gradient(120deg, #f0e0f3, #8e7d9c);
+}
