--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,9 +8,9 @@
 	padding: 0;
 }
 
-.navigation_list-item {
+.navigation_list-item a {
 	display: inline-block;
-    color: #616263;
+    color: darkslategray;
     background-color: whitesmoke;
     text-decoration: none;
     padding: 2px;
