--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,3 +24,8 @@
     background-color: #e4b4ea;
     background-image: linear-gradient(120deg, #f0e0f3, #8e7d9c);
 }
+
+a {
+    color: #7c7e80;
+    text-decoration: none;
+}
