--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -32,12 +32,14 @@ a {
 	display: inline-block;
 }
 
-.post {
-	color: darkslategray;
+.main-content { 
+	display: inline-block;
+    color: darkslategray;
     background-color: whitesmoke;
     text-decoration: none;
     padding: 2px;
     font-weight: bold;
     border-radius: 5px;	
 }
+	
 	
