--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -32,3 +32,9 @@ a {
     text-decoration: none;
     border-radius: 5px;	
 }
+
+.main-content {
+	padding: 0;
+	font-weight: bold;
+	border-radius: 5px;
+}
