--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,3 +25,7 @@
     background-color: #e4b4ea;
     background-image: linear-gradient(120deg, #f0e0f3, #8e7d9c);
 }
+
+a {
+	color: darkslategray;
+}
