--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,3 +30,8 @@ a {
     color: darkslategray;
     text-decoration: none;
 }
+
+.main-content {
+	color: darkslategray;
+    text-decoration: none;
+}
