--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
   </head>
     
   <body>
-    <a class="a"> id="skip-to-content" href="#content">Skip to the content.</a>
+    <a class="a"> <id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
